<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:padding="24dp"
    android:layout_centerHorizontal="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_green"
        android:text="REGLETTE DU BONHEUR"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/choices_layout"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:text="Question"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/choices_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/ans_1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="1"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:textSize="30dp"
            android:text="@string/s1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="2"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="3"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="4"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="5"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="6"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_7"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="7"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="8"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s8"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_9"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="9"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s9"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ans_10"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="10"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:text="@string/s10"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="16dp"
        android:text="QUESTION SUIVANTE" />


</RelativeLayout>